# storefront/src/features/auth/model/types.ts
@@ -19,6 +19,11 @@ export interface GoogleLoginPayload {
   create_account: boolean
 }
 
+export interface FacebookLoginPayload {
+  access_token: string
+  create_account: boolean
+}
+
 export interface UserProfile {
   id: string
   email: string
